--- a/views/room.ejs
+++ b/views/room.ejs
@@ -1,7 +1,37 @@
-<%- include('header'); -%>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Google Meet Clone</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+    crossorigin="anonymous"></script>
+  <link rel="stylesheet" href="/css/style.css" />
+  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script>
+  <script>
+    const ROOM_ID = '<%= roomId %>';
+  </script>
+</head>
+
+<body>
+  <div class="container"></div>
 
 
 <div id="video-grid"></div>
 
+</div>
 
-<%- include('footer'); -%>
+<script src="/socket.io/socket.io.js"></script>
+
+<script src="/js/script.js"></script>
+</body>
+  <footer>
+      Copyright 2022 HerDevStories
+  </footer>
+</html>
