--- a/views/room.ejs
+++ b/views/room.ejs
@@ -13,8 +13,9 @@
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css" />
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script>
-  <script>
+  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script> -->
+  <script src="socket.io/socket.io.js"></script>
+ <script>
     const ROOM_ID = '<%= roomId %>';
   </script>
 </head>
@@ -27,7 +28,7 @@
 
 </div>
 
-<script src="/socket.io/socket.io.js"></script>
+
 
 <script src="/js/script.js"></script>
 </body>
