--- a/views/room.ejs
+++ b/views/room.ejs
@@ -12,10 +12,12 @@
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="/css/style.css" />
+  <script src="https://kit.fontawesome.com/e4539b2eac.js" crossorigin="anonymous"></script>
+
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script> -->
   <script src="socket.io/socket.io.js"></script>
- <script>
+  <script>
     const ROOM_ID = '<%= roomId %>';
   </script>
 </head>
@@ -28,52 +30,67 @@
       </div>
       <h3>Video Chat</h2>
     </div>
-  </div>  
-  <div class="main">  
-  <div class="main__left">
-    <div class="videos__group">
-      <div id="video-grid">
-
-      </div>
-    </div>
-    <div class="options">
-      <div class="options__left">
-        <div id="stopVideo" class="options__button">
-          <i class="fa fa-video-camera"></i>
-        </div>
-        <div id="muteButton" class="options__button">
-          <i class="fa fa-microphone"></i>
-        </div>
-        <div id="showChat" class="options__button">
-          <i class="fa fa-comment"></i>
-        </div>
-      </div>
-      <div class="options__right">
-        <div id="inviteButton" class="options__button">
-          <i class="fas fa-user-plus"></i>
-        </div>
-      </div>
-    </div>
   </div>
-  <div class="main__right">
-    <div class="main__chat_window">
+  <div class="main">
+    <div class="main__left">
+      <div class="videos__group">
+        <div id="video-grid">
+
+        </div>
+      </div>
+      <div class="text-box" contenteditable="true">HelloWorld</div>
+      <div class="options">
+       
+        <div class="options__left">
+          <div id="stopVideo" class="options__button">
+            <i class="fa fa-video-camera"></i>
+          </div>
+          <div id="muteButton" class="options__button">
+            <i class="fa fa-microphone"></i>
+          </div>
+          <div id="captionButton" class="options__button">
+            <i class="fa-solid fa-closed-captioning"></i>
+          </div>
+
+          <div id="presentButton" class="options__button">
+            <i class="fa-solid fa-presentation-screen"></i>
+          </div>
+          <form action="/thankyou">
+          <div id="leaveMeeting" class="options__button">
+         <button type="submit" name="room" value="<%= roomId %>"> <i class="fa-solid fa-circle-phone-hangup"></i></button>
+          </div>
+        </form>
+          <div id="showChat" class="options__button">
+            <i class="fa fa-comment"></i>
+          </div>
+        </div>
+        <div class="options__right">
+          <div id="inviteButton" class="options__button">
+            <i class="fas fa-user-plus"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="main__right">
+      <div class="main__chat_window">
         <div class="messages">
 
         </div>
-    </div>
-    <div class="main__message_container">
-      <input id="chat_message" type="text" autocomplete="off" placeholder="Type message here...">
-      <div id="send" class="options__button">
-        <i class="fa fa-plus" aria-hidden="true"></i>
+      </div>
+      <div class="main__message_container">
+        <input id="chat_message" type="text" autocomplete="off" placeholder="Type message here...">
+        <div id="send" class="options__button">
+          <i class="fa fa-plus" aria-hidden="true"></i>
+        </div>
       </div>
     </div>
-  </div>
-</div>ß
+  </div>ß
 
 
-<script src="/js/script.js"></script>
+  <script src="/js/script.js"></script>
 </body>
-  <footer>
-      Copyright 2022 HerDevStories
-  </footer>
+<footer>
+  Copyright 2022 HerDevStories
+</footer>
+
 </html>
