--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -6,35 +6,137 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Google Meet Clone</title>
+
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="css/style.css" />
 
+  <link rel="stylesheet" href="css/style.css" />
+  <link rel="stylesheet" href="css/home.css" />
 </head>
 
 <body>
-  <div class="container"></div>
+  <header
+    class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+      <svg class="bi me-2" width="40" height="32">
+        <use xlink:href="#bootstrap"></use>
+      </svg>
+      <span class="fs-4">Simple header</span>
+    </a>
+  </header>
 
-
+  <div class="container">
     <div class="jumbotron">
-       
-    <a href="/newRoom">Start a meeting</a>
-       
-        or
-        
-        <form action="/" method="post"> 
-        <input type="text" name="room" placeholder="enter meeting link">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-lg-6 center">
+          <h1 class="display-5 fw-bold lh-1 mb-3">Secure Video Conferencing for everyone</h1>
+          <p class="lead">Connect, collaborate, and celebrate from anywhere with Google Meet</p>
+          <div class="">
+            <div class="row">
+              <div class="col-4">
+                <a href="/newRoom" class="btn btn-primary btn-md">New Meeting</a>
+              </div>
+              <div class="col-8">
+                <!-- <input type="text" class="form-control" class="btn btn-outline-secondary btn-lg " placeholder="Enter a meeting code">
+            <button type="button" class="btn btn-primary btn-lg">Join</button> -->
+                <form action="/" method="post">
+                  <div class="input-group mb-3">
+                    <input type="text" name="room" class="form-control" placeholder="Enter a Meeting Link"
+                      aria-label="Recipient's username" aria-describedby="button-addon2" />
+                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Join</button>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col-10 col-sm-8 col-lg-6 center resize">
+          <!-- <img src="bootstrap-themes.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700" height="500" loading="lazy"> -->
+          <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="img/first.svg" class="d-block w-75 center" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>First slide label</h5>
+                  <p>Some representative placeholder content for the first slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/second.svg" class="d-block w-75 center" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Second slide label</h5>
+                  <p>Some representative placeholder content for the second slide.</p>
+                </div>
+              </div>
+              <div class="carousel-item">
+                <img src="img/third.svg" class="d-block w-75 center" alt="..." />
+                <div class="carousel-caption d-none d-md-block">
+                  <h5>Third slide label</h5>
+                  <p>Some representative placeholder content for the third slide.</p>
+                </div>
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions"
+              data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+        </div>
+      </div>
 
-        <button type="submit" class="btn btn-light">Join</button>
-    </form>
-    <!-- <div id="video-grid"></div> -->
-    
+      <!-- <div id="video-grid"></div> -->
     </div>
-  </body>
-  <footer>
-      Copyright 2022 HerDevStories
+  </div>
+</body>
+<div class="container">
+  <footer class="d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+    <div class="col-md-4 d-flex align-items-center">
+      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
+        <svg class="bi" width="30" height="24">
+          <use xlink:href="#bootstrap"></use>
+        </svg>
+      </a>
+      <span class="text-muted">© 2021 Company, Inc</span>
+    </div>
+
+    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
+      <li class="ms-3">
+        <a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#twitter"></use>
+          </svg></a>
+      </li>
+      <li class="ms-3">
+        <a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#instagram"></use>
+          </svg></a>
+      </li>
+      <li class="ms-3">
+        <a class="text-muted" href="#"><svg class="bi" width="24" height="24">
+            <use xlink:href="#facebook"></use>
+          </svg></a>
+      </li>
+    </ul>
   </footer>
+</div>
+<!-- <footer>
+      Copyright 2022 HerDevStories
+  </footer> -->
+
 </html>
