--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,11 +1,24 @@
-.b-example-divider {
+/* .b-example-divider {
     height: 3rem;
     background-color: rgba(0, 0, 0, .1);
     border: solid rgba(0, 0, 0, .15);
     border-width: 1px 0;
     box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
   }
+   */
+
+  .main{
+    height: 78vh;
+  }
+  .footer{
+    height: 7vh;
+   
+  }
+  .head{
+    height: 8vh;
+  }
   
+
   .form-control-dark {
     color: #fff;
     background-color: var(--bs-dark);
@@ -38,3 +51,4 @@
   .resize{
     padding: 30px;
   }
+
