--- a/views/leaveMeeting.ejs
+++ b/views/leaveMeeting.ejs
@@ -12,6 +12,16 @@
 
 </head>
 <body>
+  <header
+  class="head d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
+  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
+    <svg class="bi me-2" width="40" height="32">
+      <use xlink:href="#bootstrap"></use>
+    </svg>
+    <span class="fs-4">Video Conferencing App
+    </span>
+  </a>
+</header>
     <div class="container">
         
     <div class="main px-4 py-5 my-5 text-center">
@@ -26,7 +36,7 @@
         </div>
       </div>
 
-<footer class="footer  d-flex flex-wrap justify-content-between align-items-center py-3 my-4 border-top">
+<footer class="footer  d-flex flex-wrap justify-content-between align-items-center py-3  border-top">
     <div class="col-md-4 d-flex align-items-center">
       <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
         <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
