--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,77 +1,46 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8" />
-  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Google Meet Clone</title>
-
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-    crossorigin="anonymous"></script>
-
-  <!-- <link rel="stylesheet" href="css/style.css" /> -->
-  <link rel="stylesheet" href="css/home.css" />
-</head>
-
-<body>
-  <header
-    class="head d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-    <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-      <svg class="bi me-2" width="40" height="32">
-        <use xlink:href="#bootstrap"></use>
-      </svg>
-      <span class="fs-4">Video Conferencing App
-      </span>
-    </a>
-  </header>
+<%- include('header'); -%>
 
   <div class="main container">
-          
-      <div class=" px-4 py-5 my-5 text-center">
-  
-          <h1 class="display-5 fw-bold">Secure Video Conferencing for everyone</h1>
-          <div class="col-lg-6 mx-auto">
-            <p class="lead mb-4">Connect, collaborate, and celebrate from anywhere with this video conferencing app</p>
-            <div class="row">
-              <div class="col-4">
-                <a href="/newRoom" class="btn btn-primary btn-md">New Meeting</a>
+
+    <div class=" px-4 py-5 my-5 text-center">
+
+      <h1 class="display-5 fw-bold">Secure Video Conferencing for everyone</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Connect, collaborate, and celebrate from anywhere with this video conferencing app</p>
+        <div class="row">
+          <div class="col-4">
+            <a href="/newRoom" class="btn btn-primary btn-md">New Meeting</a>
+          </div>
+          <div class="col-8">
+
+            <form action="/" method="post">
+              <div class="input-group mb-3">
+                <input type="text" name="room" id="room" class="form-control" onkeyup="manage(this)"
+                  placeholder="Enter a Meeting Link" aria-label="Recipient's username"
+                  aria-describedby="button-addon2" />
+                <button class="btn btn-outline-secondary" type="submit" id="button" disabled>Join</button>
               </div>
-              <div class="col-8">
-              
-                <form action="/" method="post">
-                  <div class="input-group mb-3">
-                    <input type="text" name="room" class="form-control" placeholder="Enter a Meeting Link"
-                      aria-label="Recipient's username" aria-describedby="button-addon2" />
-                    <button class="btn btn-outline-secondary" type="submit" id="button-addon2">Join</button>
-                  </div>
-                </form>
-              </div>
-            </div>
+            </form>
           </div>
         </div>
       </div>
-      
-  <footer class="footer  d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
-      <div class="col-md-4 d-flex align-items-center">
-        <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-          <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-        </a>
-        <span class="text-muted">© 2021 Company, Inc</span>
-      </div>
-  
-      <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-        <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-      </ul>
-    </footer>
-  
-  </body>
+    </div>
+  </div>
 
-  
+  <%- include('footer'); -%>
+    </body>
 
-</html>
+    <script>
+      function manage(room) {
+        var bt = document.getElementById('button');
+        if (room.value != '') {
+          bt.disabled = false;
+        }
+        else {
+          bt.disabled = true;
+        }
+      }
+
+    </script>
+
+    </html>
