--- a/views/leaveMeeting.ejs
+++ b/views/leaveMeeting.ejs
@@ -1,58 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Google Meet Clone</title>
- 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="css/return.css" />
+<%- include('header'); -%>
+  <div class="main container">
 
-</head>
-<body>
-  <header
-  class="head d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-  <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-    <svg class="bi me-2" width="40" height="32">
-      <use xlink:href="#bootstrap"></use>
-    </svg>
-    <span class="fs-4">Video Conferencing App
-    </span>
-  </a>
-</header>
-    <div class="container">
-        
-    <div class="main px-4 py-5 my-5 text-center">
-        <img class="d-block mx-auto mb-4" src="" alt="" width="72" height="57">
-        <h1 class="display-5 fw-bold">You left the meeting</h1>
-        <div class="col-lg-6 mx-auto">
-          <p class="lead mb-4">Thank you for using this product</p>
-          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a  href="/<%= roomId %>" class="btn btn-outline-primary  btn-lg px-4 gap-3">rejoin</a>
-            <a href="/"  class="btn btn-primary btn-lg px-4">Return to homescreen</a>
-          </div>
+    <div class=" px-4 py-5 my-5 text-center">
+      <h1 class="display-5 fw-bold">You left the meeting</h1>
+      <div class="col-lg-6 mx-auto">
+        <p class="lead mb-4">Thank you for using this product</p>
+        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+          <a href="/<%= roomId %>" class="btn btn-outline-primary  btn-lg px-4 gap-3">rejoin</a>
+          <a href="/" class="btn btn-primary btn-lg px-4">Return to homescreen</a>
         </div>
       </div>
-
-<footer class="footer  d-flex flex-wrap justify-content-between align-items-center py-3  border-top">
-    <div class="col-md-4 d-flex align-items-center">
-      <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-        <svg class="bi" width="30" height="24"><use xlink:href="#bootstrap"></use></svg>
-      </a>
-      <span class="text-muted">© 2021 Company, Inc</span>
     </div>
+  </div>
+  <%- include('footer'); -%>
+    </body>
 
-    <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#twitter"></use></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#instagram"></use></svg></a></li>
-      <li class="ms-3"><a class="text-muted" href="#"><svg class="bi" width="24" height="24"><use xlink:href="#facebook"></use></svg></a></li>
-    </ul>
-  </footer>
-</div>
-</body>
-<!-- <div class="container"> -->
-   
-  <!-- </div> -->
-</html>
+    </html>
