--- a/views/room.ejs
+++ b/views/room.ejs
@@ -5,18 +5,27 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Google Meet Clone</title>
+  <title>Video Conferencing App</title>
+
+  <!-- Bootstrap Bundle -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
     crossorigin="anonymous"></script>
-  <link rel="stylesheet" href="/css/style.css" />
+
+  <!-- Font Awesome  -->
   <script src="https://kit.fontawesome.com/e4539b2eac.js" crossorigin="anonymous"></script>
 
+  <!-- Peer js Bundle -->
   <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
-  <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/peerjs/1.3.1/peerjs.min.js.map"></script> -->
+
+  <!-- Custom css -->
+  <link rel="stylesheet" href="/css/style.css" />
+
+  <!-- Socket.io  -->
   <script src="socket.io/socket.io.js"></script>
+
   <script>
     const ROOM_ID = '<%= roomId %>';
   </script>
@@ -28,26 +37,24 @@
       <div class="header__back">
         <i class="fas fa-angle-left"></i>
       </div>
-      
+
     </div>
-  </div>  
+  </div>
   <div class="main">
     <div class="main__left">
       <div class="videos__group">
         <div id="video-grid">
-
         </div>
       </div>
       <!-- <div class="text-box" contenteditable="true">HelloWorld</div> -->
       <div class="options">
         <div class="options__left">
-          <div  class="options__p">  
-            <p >Time | <%= roomId %> </p>
+          <div class="options__p">
+            <p><span id="time"></span> | <%= roomId %>
+            </p>
           </div>
-         </div>
+        </div>
         <div class="options__middle">
-          
-         
           <div id="stopVideo" class="options__button">
             <i class="fa fa-video-camera"></i>
           </div>
@@ -59,20 +66,17 @@
           </div>
 
           <div id="presentButton" class="options__button">
-            <i class="fa-solid fa-presentation-screen"></i>
+            <i class="fa fa-desktop" aria-hidden="true"></i>
           </div>
           <div id="showChat" class="options__button">
             <i class="fa fa-comment"></i>
           </div>
-          <div id="showChat2" class="options__button">
-            <i class="fa fa-comment"></i>
-          </div>
           <form action="/thankyou">
-          <div id="leaveMeeting" class="options__button background__red">
-         <button type="submit" name="room" value="<%= roomId %>"> <i class="fa-solid fa-circle-phone-hangup"></i></button>
-          </div>
-        </form>
-          
+            <div id="leaveMeeting" data-value="<%= roomId %>" class="options__button background__red">
+              <i class="fa fa-phone" aria-hidden="true"></i>
+            </div>
+          </form>
+
         </div>
         <div class="options__right">
           <div id="inviteButton" class="options__button">
@@ -81,7 +85,7 @@
         </div>
       </div>
     </div>
-    <div class="main__right">
+    <div class="main__right ">
       <div class="main__chat_window">
         <div class="messages">
 
