added illustration updated readme

--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -1,24 +1,25 @@
-<footer class="footer d-flex flex-wrap justify-content-between align-items-center py-3 border-top">
+<footer class="footer d-flex flex-wrap justify-content-between align-items-center py-3  px-4 border-top">
   <div class="col-md-4 d-flex align-items-center">
-    <a href="/" class="mb-3 me-2 mb-md-0 text-muted text-decoration-none lh-1">
-      <svg class="bi" width="30" height="24">
-        <use xlink:href="#bootstrap"></use>
-      </svg>
-    </a>
+    
     <span class="text-muted">© <span id="year"></span> bolu.tife, Inc</span>
+
   </div>
 
   <ul class="nav col-md-4 justify-content-end list-unstyled d-flex">
     <li class="ms-3">
-      <a class="text-muted" href="https://github.com/bolu-tife"><svg class="bi" width="24" height="24">
-          <use xlink:href="#github"></use>
-        </svg></a>
+      <a class="text-muted" href="https://github.com/bolu-tife">
+        <i class="bi bi-github" ></i>
+        
     </li>
     <li class="ms-3">
-      <a class="text-muted" href="https://www.linkedin.com/in/boluwatifeomosowon/"><svg class="bi" width="24" height="24">
-          <use xlink:href="#linkedin"></use>
-        </svg></a>
+      <a class="text-muted" href="https://www.linkedin.com/in/boluwatifeomosowon/">
+        <i class="bi bi-linkedin"></i>
+        </a>
     </li>
+    <li class="ms-3">
+      <a class="text-muted" href="https://www.freepik.com/vectors/remote-team">vector by freepiks</a>
+    </li>
+    
   </ul>
 </footer>
 <script>
