--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,17 +1,8 @@
-/* .b-example-divider {
-    height: 3rem;
-    background-color: rgba(0, 0, 0, .1);
-    border: solid rgba(0, 0, 0, .15);
-    border-width: 1px 0;
-    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
-  }
-   */
-
   .main{
-    height: 78vh;
+    height: 84vh;
   }
   .footer{
-    height: 7vh;
+    height: 8vh;
    
   }
   .head{
@@ -31,10 +22,6 @@
     box-shadow: 0 0 0 .25rem rgba(255, 255, 255, .25);
   }
   
-  .bi {
-    vertical-align: -.125em;
-    fill: currentColor;
-  }
   
   .text-small {
     font-size: 85%;
@@ -51,4 +38,32 @@
   .resize{
     padding: 30px;
   }
+  .bi {
+    vertical-align: -.125em;
+    fill: black;
+  }
+  .b-example-divider {
+    height: 3rem;
+    background-color: rgba(0, 0, 0, .1);
+    border: solid rgba(0, 0, 0, .15);
+    border-width: 1px 0;
+    box-shadow: inset 0 .5em 1.5em rgba(0, 0, 0, .1), inset 0 .125em .5em rgba(0, 0, 0, .15);
+  }
 
+  @media (max-width: 820px) {
+
+  .main{
+    text-align: center;
+  }
+}
+
+ 
+@media (min-width: 992px) {
+  .rounded-lg-3 { border-radius: .3rem; }
+}
+
+@media (min-width: 768px) {
+  .bd-placeholder-img-lg {
+    font-size: 3.5rem;
+  }
+}
