--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,7 @@
   align-items: center;
   position: relative;
   width: 100%;
+  height: 5vh;
   background-color: var(--main-darklg);
 }
 
@@ -33,7 +34,7 @@
 
 .main {
   overflow: hidden;
-  height: 100vh;
+  height: 95vh;
   display: flex;
 }
 
@@ -200,6 +201,12 @@ video {
 }
 
 @media (max-width: 700px) {
+  .main {
+    height: 92vh;
+  }
+  .header {
+    height: 8vh;
+  }
   .header__back {
     display: none;
     position: absolute;
