--- a/views/leaveMeeting.ejs
+++ b/views/leaveMeeting.ejs
@@ -1,7 +1,7 @@
 <%- include('header'); -%>
   <div class="main container">
 
-    <div class=" px-4 py-5 my-5 text-center">
+    <div class=" px-4 py-5 text-center">
       <h1 class="display-5 fw-bold">You left the meeting</h1>
       <div class="col-lg-6 mx-auto">
         <p class="lead mb-4">Thank you for using this product</p>
