--- a/views/room.ejs
+++ b/views/room.ejs
@@ -18,13 +18,14 @@
   <script src="https://kit.fontawesome.com/e4539b2eac.js" crossorigin="anonymous"></script>
 
   <!-- Peer js Bundle -->
-  <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
+  <script src="/js/peerjs.min.js"></script>
 
   <!-- Custom css -->
   <link rel="stylesheet" href="/css/style.css" />
 
   <!-- Socket.io  -->
-  <script src="socket.io/socket.io.js"></script>
+  <!-- <script src="socket.io/socket.io.js"></script> -->
+  <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
 
   <script>
     const ROOM_ID = '<%= roomId %>';
