--- a/views/landing.ejs
+++ b/views/landing.ejs
@@ -1,11 +1,11 @@
 <%- include('header'); -%>
 
-  <div class="main jumbotron row mx-auto px-4 py-5 ">
+  <div class="main jumbotron row mx-auto px-4 ">
     <!-- <div class="row px-4 py-5  text-center"> -->
 
       
-      <div class="col-lg-6 mx-auto">
-        <h1 class="display-5 fw-bold">Secure Video Conferencing for Everyone</h1>
+      <div class="container col-lg-6 mx-auto px-5 pt-1 ">
+        <h1 class="display-5 fw-bold pt-3">Secure Video Conferencing for Everyone</h1>
         <p class="lead mb-4">Connect, collaborate, and celebrate from anywhere with this video conferencing app</p>
         <div class=" d-grid gap-2 d-lg-flex">
           <!-- <div class="col-4"> -->
