--- a/views/room.ejs
+++ b/views/room.ejs
@@ -24,8 +24,7 @@
   <link rel="stylesheet" href="/css/style.css" />
 
   <!-- Socket.io  -->
-  <!-- <script src="socket.io/socket.io.js"></script> -->
-  <script src="https://cdn.socket.io/4.4.1/socket.io.min.js" integrity="sha384-fKnu0iswBIqkjxrhQCTZ7qlLHOFEgNkRmK2vaO/LbTZSXdJfAu6ewRBdwHPhBo/H" crossorigin="anonymous"></script>
+  <script src="/socket.io/socket.io.js"></script>
 
   <script>
     const ROOM_ID = '<%= roomId %>';
