fix peerjs connection

--- a/views/room.ejs
+++ b/views/room.ejs
@@ -25,6 +25,7 @@
 
   <!-- Socket.io  -->
   <script src="/socket.io/socket.io.js"></script>
+  <!-- <script src = "/socket.io/socket.io.js" defer></script> -->
 
   <script>
     const ROOM_ID = '<%= roomId %>';
